--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     
 		<div class='row'>
-			<div id='tree1' class='col col-md-2'></div>
+			<div id='hierarchy' class='col col-md-2'></div>
 			
 			<div id='quiz' class='col col-md-10'>
         <iframe id="iframeH5P"
@@ -32,8 +32,6 @@
 			</div>
 		</div>
 	</div>
-  
-  <button id='test'> test </button>
   
 
   <!--- script for H5P resizing -->  
