--- a/links1.html
+++ b/links1.html
@@ -8,7 +8,7 @@
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	<link rel="stylesheet" href="css/jqtree.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/links1.css">
 </head>
 
 <body class="mv-colorscheme">
@@ -65,7 +65,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>	
 	
 	<script src="js/tree.jquery.js"></script> 
-	<script src="js/main.js"></script>
+	<script src="js/links1.js"></script>
 	
 	<script>
 		document.addEventListener('DOMContentLoaded', app.init);
