basic filter select working

--- a/filtertester.html
+++ b/filtertester.html
@@ -34,47 +34,47 @@
     </div>
     <div>
       <label class="filter-select-label">
-        <input id="filter_select01" class="filter-select" type="checkbox" name="filter" value="0"> hue-rotate deg (0-360)
+        <input id="filter_select01" class="filter-select" type="checkbox" name="filter" value="1"> hue-rotate deg (0-360)
       </label>
     </div>
     <div>
       <label class="filter-select-label">
-        <input id="filter_select02" class="filter-select" type="checkbox" name="filter" value="0"> opacity % (0-100)
+        <input id="filter_select02" class="filter-select" type="checkbox" name="filter" value="2"> opacity % (0-100)
       </label>
     </div>
     <div>
       <label class="filter-select-label">
-        <input id="filter_select03" class="filter-select" type="checkbox" name="filter" value="0"> brightness % (0 - 400?)
+        <input id="filter_select03" class="filter-select" type="checkbox" name="filter" value="3"> brightness % (0 - 400?)
       </label>
     </div>
     <div>
       <label class="filter-select-label">
-        <input id="filter_select04" class="filter-select" type="checkbox" name="filter" value="0"> contrast % (0 - 400?)
+        <input id="filter_select04" class="filter-select" type="checkbox" name="filter" value="4"> contrast % (0 - 400?)
       </label>
     </div>
     <div>
       <label class="filter-select-label">
-        <input id="filter_select05" class="filter-select" type="checkbox" name="filter" value="0"> saturate % (0 - 400?)
+        <input id="filter_select05" class="filter-select" type="checkbox" name="filter" value="5"> saturate % (0 - 400?)
       </label>
     </div>
     <div>
       <label class="filter-select-label">
-        <input id="filter_select06" class="filter-select" type="checkbox" name="filter06" value="0"> drop-shadow h-shadow(+/-px) v-shadow(+/-px) blur(px) color
+        <input id="filter_select06" class="filter-select" type="checkbox" name="filter" value="6"> drop-shadow h-shadow(+/-px) v-shadow(+/-px) blur(px) color
       </label>
     </div>
     <div>
       <label class="filter-select-label">
-        <input id="filter_select07" class="filter-select" type="checkbox" name="filter07" value="0"> grayscale % (0-100)
+        <input id="filter_select07" class="filter-select" type="checkbox" name="filter" value="7"> grayscale % (0-100)
       </label>
     </div>
     <div>
       <label class="filter-select-label">
-        <input id="filter_select08" class="filter-select" type="checkbox" name="filter08" value="0"> invert % (0-100)
+        <input id="filter_select08" class="filter-select" type="checkbox" name="filter" value="8"> invert % (0-100)
       </label>
     </div>
     <div>
       <label class="filter-select-label">
-        <input id="filter_select09" class="filter-select" type="checkbox" name="filter09" value="0"> sepia % (0-100)
+        <input id="filter_select09" class="filter-select" type="checkbox" name="filter" value="9"> sepia % (0-100)
       </label>
     </div>
   </div>
