--- a/filtertester.html
+++ b/filtertester.html
@@ -11,73 +11,7 @@
 
 <body class="mv-colorscheme">
   <div id="title"> Filter tester </div>
-  
-  <div id="image-container">
-    <div> <img id="image"> </div>
-    
-    <label class="image-select-label">
-      <input id="image_select0" class="image-select" type="radio" name="image_select" value="0"> image 1
-    </label>
-    <label class="image-select-label">
-      <input id="image_select1" class="image-select" type="radio" name="image_select" value="1"> image 2
-    </label>
-    <label class="image-select-label">
-      <input id="image_select2" class="image-select" type="radio" name="image_select" value="2"> image 3
-    </label>
-  </div>
-  
-  <div id="filter-container">
-    <div>
-      <label class="filter-select-label">
-        <input id="filter_select00" class="filter-select" type="checkbox" name="filter" value="0"> blur  #px (0 - 100?)
-      </label>
-    </div>
-    <div>
-      <label class="filter-select-label">
-        <input id="filter_select01" class="filter-select" type="checkbox" name="filter" value="1"> hue-rotate deg (0-360)
-      </label>
-    </div>
-    <div>
-      <label class="filter-select-label">
-        <input id="filter_select02" class="filter-select" type="checkbox" name="filter" value="2"> opacity % (0-100)
-      </label>
-    </div>
-    <div>
-      <label class="filter-select-label">
-        <input id="filter_select03" class="filter-select" type="checkbox" name="filter" value="3"> brightness % (0 - 400?)
-      </label>
-    </div>
-    <div>
-      <label class="filter-select-label">
-        <input id="filter_select04" class="filter-select" type="checkbox" name="filter" value="4"> contrast % (0 - 400?)
-      </label>
-    </div>
-    <div>
-      <label class="filter-select-label">
-        <input id="filter_select05" class="filter-select" type="checkbox" name="filter" value="5"> saturate % (0 - 400?)
-      </label>
-    </div>
-    <div>
-      <label class="filter-select-label">
-        <input id="filter_select06" class="filter-select" type="checkbox" name="filter" value="6"> drop-shadow h-shadow(+/-px) v-shadow(+/-px) blur(px) color
-      </label>
-    </div>
-    <div>
-      <label class="filter-select-label">
-        <input id="filter_select07" class="filter-select" type="checkbox" name="filter" value="7"> grayscale % (0-100)
-      </label>
-    </div>
-    <div>
-      <label class="filter-select-label">
-        <input id="filter_select08" class="filter-select" type="checkbox" name="filter" value="8"> invert % (0-100)
-      </label>
-    </div>
-    <div>
-      <label class="filter-select-label">
-        <input id="filter_select09" class="filter-select" type="checkbox" name="filter" value="9"> sepia % (0-100)
-      </label>
-    </div>
-  </div>
+  <div id="contents"></div>
  
   <script src="js/filtertester.js"></script>
 	
