--- a/filtertester.html
+++ b/filtertester.html
@@ -6,6 +6,7 @@
 	
 	<title>WebDesign filter tester</title>
 
+  <link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/filtertester.css">
 </head>
 
