--- a/transformtester.html
+++ b/transformtester.html
@@ -6,6 +6,7 @@
 	
 	<title>WebDesign transform tester</title>
 
+  <link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/transformtester.css">
 </head>
 
